finishing search bar bug

--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -97,4 +97,10 @@
   {
     font-size: 0.8rem;
   }
+  .search-bar {
+    padding: 0.5rem 5px;
+  }
+  .search-bar > input{
+    width: 50%;
+  }
 }
